--- a/src/main/resources/templates/admin/member/list.html
+++ b/src/main/resources/templates/admin/member/list.html
@@ -136,7 +136,7 @@
                 </tr>
                 </tbody>
             </table>
-            <button class="insert_btn">
+            <button class="btn">
                 <i class="fa-solid fa-pen-to-square"></i>선택수정
             </button>
             <div class="pagingBox">
