--- a/src/main/resources/templates/myPage/layout/mypage_layout2.html
+++ b/src/main/resources/templates/myPage/layout/mypage_layout2.html
@@ -2,6 +2,10 @@
 <html lagn="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<script type="text/javascript" th:src="@{/js/my/mysidebar.js}"></script>
+<link rel="stylesheet" th:href="@{/css/my/myPage_sidebar.css}" />
+
+
 <!--<link rel="stylesheet" th:href="@{/css/my/modal.css}">-->
 <!--<script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>-->
 <!--<script type="text/javascript" th:src="@{/js/my/searchPeriod.js}"></script>-->
