--- a/src/main/resources/templates/company/layout/company_layout.html
+++ b/src/main/resources/templates/company/layout/company_layout.html
@@ -38,7 +38,7 @@
 </th:block>
   <!-- 스크롤 최상단 버튼 -->
   <button id="scrollTopBtn" class="scroll-top-btn" onclick="scrollToTop()">
-    <img src="/images/up.png" alt="print" />
+    <i class="fas fa-arrow-up"></i>
   </button>
 
   <script>
