--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -1051,6 +1051,8 @@
                             <td id="additional-memo"></td>
                         </tr>
                     </table>
+                    <!-- 배송 완료 버튼 -->
+                    <button type="button" id="complete-delivery-btn">배송 완료</button>
                 </article>
             </section>
         </div>
